<resources>
    <string name="app_name">安和物业</string>
    <string name="app_version">安和物业 v1.0</string>
    <string name="app_copyright">Copyright ©2016 – 2020 Muzi Scicence And Technology.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">register</string>

    <string name="selector_from_Local">从本地图库选择</string>
    <string name="selector_from_Camera">从照相机获取</string>

    <string name="ERROR_TEXT_COMPRESS_FILED">压缩储存失败,无法返回带压缩请求的位图和文件.</string>
    <string name="ERROR_TEXT_FILE_FILED">文件操作失败,请检查储存容量和应用权限.</string>
    <string name="ERROR_TEXT_FILE_SAVE_FAILED">文件储存失败,无法返回结果.</string>
    <string name="ERROR_TEXT_PIC_INCURRECT">获取到的图像异常,无法进行操作.</string>
    <string name="ERROR_TEXT_BITMAP_TOOLAGER">Bitmap对象大于 1MB 无法返回.</string>

    <string name="ERROR_TEXT_CAMERA_NO_DATA">照相机无数据返回.</string>
    <string name="ERROR_TEXT_LOCAL_NO_DATA">图库无数据返回.</string>
    <string name="ERROR_TEXT_ARG">请求参数异常.</string>
    <string name="ERROR_TEXT_UNKNOWN">未知的返回数据.</string>
    <string name="ERROR_TEXT_PERMISSION">请先授予应用相应权限.</string>
    <string name="ERROR_TEXT_MOVEFAILED">移动文件时发生错误.</string>

    <string-array name="angleFix">
        <item>0°</item>
        <item>90°</item>
        <item>180°</item>
        <item>270°</item>
    </string-array>

    <!--选择小区栋数楼号相关文字-->
    <string name="dataUpdated">数据已更新</string>
    <string name="noData">此区域没有相关数据,或操作未成功</string>
    <string name="no_community">请先选择所在小区</string>
    <string name="no_apar">请先选择所在楼号</string>
    <string name="no_unit">请先选择所在单元</string>

    <!--通用文字部分-->
    <string name="simple_ok">确定</string>
    <string name="simple_done">完成</string>
    <string name="simple_cancel">取消</string>
    <string name="simple_cancel_action">已取消操作</string>
    <string name="simple_checking">正在查询,请稍候…</string>
    <string name="simple_working">正在处理,请稍候…</string>
    <string name="simple_failed">操作失败</string>
    <string name="error_network">网络发生异常,请稍候重试</string>
    <string name="error_input_empty">必填内容不能为空</string>
    <string name="error_input_empty_with_password">必填内容不能为空,同时确认密码的一致性</string>
    <string name="error_permission_sms">应用无短信权限,操作失败</string>
    <string name="error_permission_storage">应用无储存权限,操作失败</string>
    <string name="error_permission_phone">应用无电话权限,操作失败</string>
    <string name="error_permission_camera">应用无相机权限,操作失败</string>
    <string name="error_permission_guest">您当前为游客身份,无法查看此功能</string>

    <string name="SMS_Warnning">每个用户每天仅可以请求5次验证码.次数会在每天凌晨重置.验证码送达可能会有延迟,请您耐心等待.</string>
    <string name="SMS_Code_Pass">验证码通过</string>
    <string name="SMS_Code_Failed">验证码无效</string>
    <string name="SMS_Sending">短信请求中,请稍候…</string>
    <string name="SMS_Sended">短信请求成功</string>
    <string name="SMS_Failed">短信请求失败</string>

    <!--登录界面-->
    <string name="hit_userName">请输入您的手机号码</string>
    <string name="hit_userPassword">请输入您的登录密码</string>
    <string name="simple_login_normal">登录</string>
    <string name="simple_login_guest">游客登录</string>
    <string name="simple_login_admin">管理员登录</string>
    <string name="button_register_enter">注册账户</string>
    <string name="button_forget_enter">忘记密码</string>
    <string name="login_loading">正在登陆中,请稍候…</string>
    <string name="login_successful_normal">登录成功</string>
    <string name="login_successful_guest">已以游客身份登录</string>
    <string name="login_failed">登录失败</string>

    <!--注册界面 第一步页面-->
    <string name="register_step1_title">第一步:确认手机号</string>
    <string name="phoneNumber_error">手机号码不正确</string>
    <string name="phoneNumber_registered">此手机号码已注册</string>

    <!--注册界面 第二部页面-->
    <string name="register_step2_title">第二部:确认验证码</string>
    <string name="sendSMSCode">获取验证码</string>
    <string name="sendSMSHit">请输入获取到的验证码</string>
    <string name="checkCode">提交验证码</string>
    <string name="checkPass">验证成功</string>

    <!--注册界面 第三部分-->
    <string name="register_step3_title">第三部:填写住户信息</string>
    <string name="input_password">您的登录密码</string>
    <string name="input_password_again">密码确认</string>
    <string name="input_password_id">您的昵称</string>
    <string name="input_password_name">您的姓名</string>
    <string name="input_password_phone">您的电话</string>
    <string name="register_successful">注册完成! 请使用新账号进行登录浏览</string>

    <!--忘记密码界面-->
    <string name="forget_title">忘记密码</string>
    <string name="button_forget">找回密码</string>
    <string name="head_result_password">您的密码为: </string>
    <string name="result_no_user">此号码并没有注册</string>

    <!--主界面-->
    <string name="double_click_logout">再次点击返回键注销当前账号</string>

    <!--切换小区界面-->
    <string name="switch_community_title">切换浏览小区</string>
    <string name="error_no_community">当前没有小区数据</string>
    <string name="error_already_default">您已切在注册所在地</string>
    <string name="switch_back_default">已还原为注册区域</string>
    <string name="head_currect_community">当前小区:</string>
    <string name="head_to_community">切换到小区:</string>
    <string name="head_to_community_toast">您已切换到:</string>
    <string name="head_reset">回返注册所在地</string>

    <!--头像修改界面-->
    <string name="upload_failed">上传失败,请重试</string>
    <string name="upload_success">上传成功!</string>
    <string name="error_creating_file">创建文件失败,请检查内存容量与权限</string>
    <string name="error_file">文件损坏异常,请重试</string>

    <!--密码修改界面-->
    <string name="changePassword_title">修改密码</string>
    <string name="password_title_new">更改密码</string>
    <string name="password_title_reset">重置密码</string>
    <string name="password_incorrect">旧密码错误</string>
    <string name="password_incorrect_again">两次输入的密码不一致</string>
    <string name="change_password_successful">修改密码成功</string>
    <string name="change_password_success_half">修改密码成功,但本地同步失败,操作将在下一次登录生效</string>
    <string name="layout_title">设定新的密码</string>
    <string name="layout_old_password">旧密码</string>
    <string name="layout_new_password">新密码</string>
    <string name="layout_new_password_again">新密码确认</string>
    <string name="layout_hit_input_old">请输入旧密码</string>
    <string name="layout_hit_input_new">请输入新密码</string>
    <string name="layout_hit_input_again">请再次确认新密码</string>

    <!--联系方式界面-->
    <string name="userinfo_title">用户信息</string>
    <string name="layout_head_phone">注册电话号码</string>
    <string name="layout_head_comm">小区</string>
    <string name="layout_head_apra">楼号</string>
    <string name="layout_head_unit">单元</string>
    <string name="layout_head_room">房号</string>

    <!--设置界面-->
    <string name="setting_title">应用设置</string>

</resources>
