<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="com.ocwvar.muzi.Activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/emptyBG"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="28dp"
            android:background="@xml/shape">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_phone"/>

            <Button
                android:id="@+id/button_sendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="#fd7043"
                android:text="@string/sendSMSCode"
                android:textColor="#fff"/>

            <EditText
                android:id="@+id/editText_forget_getPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_toEndOf="@+id/imageView4"
                android:layout_toLeftOf="@id/button_sendCode"
                android:layout_toRightOf="@+id/imageView4"
                android:layout_toStartOf="@id/button_sendCode"
                android:background="#00000000"
                android:hint="@string/hit_userName"
                android:maxLines="11"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColorHint="#888888"
                android:textSize="16sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            android:background="@xml/shape"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail"/>

            <EditText
                android:id="@+id/editText_getcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:background="#00000000"
                android:hint="@string/sendSMSHit"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:textColorHint="#888888"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            android:text="根据政策 , 一个手机号在一天内只能请求5次短信验证码 , 若超过次数的用户请您次日再进行尝试"/>

        <Button
            android:id="@+id/button_forget_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/d"
            android:text="@string/button_forget"
            android:textColor="#fff"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

